--- a/Klike/Sources/Controllers/KLSignUpViewController.xib
+++ b/Klike/Sources/Controllers/KLSignUpViewController.xib
@@ -159,6 +159,9 @@
                                     <include reference="yUU-lw-TVd"/>
                                 </mask>
                             </variation>
+                            <connections>
+                                <action selector="onSubmit:" destination="-1" eventType="touchUpInside" id="xV7-sD-2ji"/>
+                            </connections>
                         </button>
                     </subviews>
                     <color key="backgroundColor" red="0.34901960780000002" green="0.35294117650000001" blue="0.74117647060000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
