--- a/Klike/Sources/Controllers/KLLoginViewController.xib
+++ b/Klike/Sources/Controllers/KLLoginViewController.xib
@@ -6,6 +6,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="KLLoginViewController">
             <connections>
+                <outlet property="countryCodeButton" destination="AQW-fj-NY4" id="e2D-Na-1WW"/>
                 <outlet property="tutorialViewContainer" destination="Pok-Ih-FNc" id="oI3-cz-OHr"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
@@ -39,7 +40,9 @@
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="right" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="AQW-fj-NY4">
                             <rect key="frame" x="16" y="20" width="50" height="34"/>
                             <constraints>
-                                <constraint firstAttribute="width" constant="50" id="6KL-Nm-OFK"/>
+                                <constraint firstAttribute="width" constant="50" id="6KL-Nm-OFK">
+                                    <variation key="widthClass=compact" constant="66"/>
+                                </constraint>
                                 <constraint firstAttribute="height" constant="34" id="LjB-lG-S4y"/>
                             </constraints>
                             <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="16"/>
@@ -210,7 +213,7 @@
                         <constraint firstItem="yxn-cO-Lds" firstAttribute="leading" secondItem="AQW-fj-NY4" secondAttribute="trailing" id="u9d-3v-RqO"/>
                         <constraint firstItem="9gZ-5Z-O5m" firstAttribute="top" secondItem="oNp-ts-Lnz" secondAttribute="bottom" constant="7" id="uMO-6O-xIh"/>
                         <constraint firstItem="AQW-fj-NY4" firstAttribute="leading" secondItem="i64-uT-yg5" secondAttribute="leading" constant="16" id="uvS-oM-utO">
-                            <variation key="widthClass=compact" constant="16"/>
+                            <variation key="widthClass=compact" constant="0.0"/>
                         </constraint>
                     </constraints>
                     <variation key="default">
@@ -222,19 +225,19 @@
                         </mask>
                         <mask key="constraints">
                             <exclude reference="QK1-a7-bSC"/>
-                            <exclude reference="01c-6o-VtU"/>
-                            <exclude reference="ZTz-H7-71I"/>
-                            <exclude reference="guF-me-yJK"/>
-                            <exclude reference="S6m-gG-wvc"/>
-                            <exclude reference="UOF-he-3zO"/>
-                            <exclude reference="mxU-wr-KLA"/>
-                            <exclude reference="4yB-9D-GRU"/>
-                            <exclude reference="PE1-at-brr"/>
-                            <exclude reference="XXa-3r-xK0"/>
                             <exclude reference="0OO-2f-Oj8"/>
                             <exclude reference="G3p-BA-K28"/>
                             <exclude reference="p4V-QB-O4q"/>
                             <exclude reference="uMO-6O-xIh"/>
+                            <exclude reference="S6m-gG-wvc"/>
+                            <exclude reference="UOF-he-3zO"/>
+                            <exclude reference="mxU-wr-KLA"/>
+                            <exclude reference="ZTz-H7-71I"/>
+                            <exclude reference="guF-me-yJK"/>
+                            <exclude reference="01c-6o-VtU"/>
+                            <exclude reference="4yB-9D-GRU"/>
+                            <exclude reference="PE1-at-brr"/>
+                            <exclude reference="XXa-3r-xK0"/>
                         </mask>
                     </variation>
                     <variation key="widthClass=compact">
@@ -246,17 +249,17 @@
                         </mask>
                         <mask key="constraints">
                             <exclude reference="QK1-a7-bSC"/>
-                            <include reference="ZTz-H7-71I"/>
-                            <include reference="guF-me-yJK"/>
-                            <include reference="S6m-gG-wvc"/>
-                            <include reference="UOF-he-3zO"/>
-                            <include reference="mxU-wr-KLA"/>
-                            <include reference="PE1-at-brr"/>
-                            <include reference="XXa-3r-xK0"/>
                             <include reference="0OO-2f-Oj8"/>
                             <include reference="G3p-BA-K28"/>
                             <include reference="p4V-QB-O4q"/>
                             <include reference="uMO-6O-xIh"/>
+                            <include reference="S6m-gG-wvc"/>
+                            <include reference="UOF-he-3zO"/>
+                            <include reference="mxU-wr-KLA"/>
+                            <include reference="ZTz-H7-71I"/>
+                            <include reference="guF-me-yJK"/>
+                            <include reference="PE1-at-brr"/>
+                            <include reference="XXa-3r-xK0"/>
                         </mask>
                     </variation>
                 </view>
